增加myDev开关，主要为api返回测试数据 增加医嘱UI，未测，因api文档有问题

--- a/app/src/main/res/layout/activity_plan_info.xml
+++ b/app/src/main/res/layout/activity_plan_info.xml
@@ -248,6 +248,7 @@
                 android:text="健康小贴士"
                 android:gravity="center_vertical"
                 android:textSize="@dimen/text_size_16"
+                android:background="@drawable/bg_plan_item"
                 android:layout_marginLeft="@dimen/space_25"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/space_40" />
