--- a/app/src/main/res/layout/layout_main_footer.xml
+++ b/app/src/main/res/layout/layout_main_footer.xml
@@ -89,6 +89,7 @@
                 android:background="@mipmap/ic_bg_unread_count"
                 android:gravity="center"
                 android:text="1"
+                android:visibility="gone"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/text_size_13" />
         </RelativeLayout>
