--- a/app/src/main/res/layout/dialog_add_text.xml
+++ b/app/src/main/res/layout/dialog_add_text.xml
@@ -8,6 +8,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:text="请输入拒绝理由"
+        android:gravity="center"
+        android:textSize="@dimen/text_size_16"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/space_40" />
     <LinearLayout
         android:background="@color/white"
         android:layout_width="match_parent"
@@ -19,7 +25,7 @@
             android:text=""
             android:background="@color/transparent"
             android:gravity="left|top"
-            android:textSize="@dimen/text_size_16"
+            android:textSize="@dimen/text_size_18"
             android:paddingLeft="5dp"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -38,7 +44,7 @@
             android:gravity="center"
             android:layout_marginLeft="@dimen/space_20"
             android:layout_marginRight="@dimen/space_20"
-            android:textSize="@dimen/text_size_20"
+            android:textSize="@dimen/text_size_18"
             android:textColor="@color/white"
             android:background="@color/color_btn_bg"
             android:layout_width="match_parent"
@@ -52,7 +58,7 @@
             android:layout_marginLeft="@dimen/space_20"
             android:layout_marginRight="@dimen/space_20"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_20"
+            android:textSize="@dimen/text_size_18"
             android:background="@color/color_btn_bg"
             android:layout_width="match_parent"
             android:layout_weight="1"
