--- a/app/src/main/res/layout/item_follow_apply.xml
+++ b/app/src/main/res/layout/item_follow_apply.xml
@@ -21,18 +21,21 @@
         android:layout_alignTop="@+id/head_img"
         >
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/info_rl"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="王志文"
                 android:id="@+id/head_name"
+                android:singleLine="true"
                 android:layout_centerVertical="true"
-                android:textSize="@dimen/text_size_20"
-                />
+                android:textSize="@dimen/text_size_18"
+                android:layout_weight="1" />
             <ImageView
                 android:id="@+id/img_sex"
                 android:layout_width="15dp"
@@ -59,8 +62,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/space_20"
-                />
-        </RelativeLayout>
+                android:layout_marginLeft="@dimen/space_15" />
+        </LinearLayout>
 
        <TextView
            android:id="@+id/tvQ"
