--- a/app/src/main/res/layout/item_follow_apply.xml
+++ b/app/src/main/res/layout/item_follow_apply.xml
@@ -7,7 +7,7 @@
         android:id="@+id/head_img"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/ic_launcher"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/space_20"
         />
